methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:8: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:39: error: Unmatched closing brace '}' ignored here
}
^